<resources>
    <string name="app_name">Apollo Trivia</string>
    <string name="question">Current question</string>

    <string name="answer0">answer zero</string>
    <string name="answer1">answer one</string>
    <string name="answer2">answer two</string>
    <string name="answer3">answer three</string>

    <string name="explanation">Explanation</string>
    <string name="yesOrNo">Not Correct</string>
    <string name="nextQuestion">Go to next question</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
